--- a/blog/main.css
+++ b/blog/main.css
@@ -47,11 +47,10 @@ body {
 li {
     left: 0px;
     top: 10px;
-    margin-left: 60px;
+    margin-left: 20px;
     display: inline-block;
-    list-style-type: none;
     color: rgb(0, 0, 0);
-    position: relative;
+   
     
 }
 .p1 {
@@ -60,11 +59,12 @@ li {
     margin-left: 20px;
     margin-right: 50px;
 }
-.blog-entries{
-    margin-top: 7%;
-    margin-left: 20%;
+#blog-entries{
+    margin-top: 5%;
+    margin-left: 12%;
     margin-right: 10px;
     font-size: 20px;
+   
 }
 
 .main{
